【追加】header,section,footerタグの追加。

--- a/lesson2_ResponsiveWebDesign/index.html
+++ b/lesson2_ResponsiveWebDesign/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>イヤホンジャックの向こう側</h1>
+    <header>
+        <h1>COCOA</h1>
+    </header>
+    <section class="information">
+        <h1>イヤホンジャックの向こう側</h1>
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
