【追加】 セクション3レクチャー20

--- a/lesson2_ResponsiveWebDesign/index.html
+++ b/lesson2_ResponsiveWebDesign/index.html
@@ -6,14 +6,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <h1>COCOA</h1>
-    </header>
-    <section class="information">
-        <h1>イヤホンジャックの向こう側</h1>
-    </section>
-    <footer>
-        
-    </footer>
+    <div class="container">
+        <header>
+            <h1>COCOA</h1>
+        </header>
+        <section class="information">
+            <h1>イヤホンジャックの向こう側</h1>
+            <p>Album</p>
+            <div class="description">
+                <img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真" >
+                <p>COCOA 4枚目のアルバムとなる今作。ジャケットデザインに色鉛筆画家の「カタヒラシュンシ」氏を迎え、音楽と絵のコラボを実現させた一枚。</p>
+                <p>HONDA CARS　静岡CM　タイアップの「キミのうた」をはじめ、完全書き下ろしの新曲3枚を含む全6曲を収録。
+                イヤホンジャックの向こう側に広がる世界を、ぜひご堪能ください。</p>
+           </div>
+        </section>
+        <footer>
+
+        </footer>
+    </div>
 </body>
 </html>
