【追加】セクション3、セクション21

--- a/lesson2_ResponsiveWebDesign/index.html
+++ b/lesson2_ResponsiveWebDesign/index.html
@@ -12,7 +12,7 @@
         </header>
         <section class="information">
             <h1>イヤホンジャックの向こう側</h1>
-            <p>Album</p>
+            <p class="type">Album</p>
             <div class="description">
                 <img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真" >
                 <p>COCOA 4枚目のアルバムとなる今作。ジャケットデザインに色鉛筆画家の「カタヒラシュンシ」氏を迎え、音楽と絵のコラボを実現させた一枚。</p>
