【追加】セクション3、レクチャー22

--- a/lesson2_ResponsiveWebDesign/index.html
+++ b/lesson2_ResponsiveWebDesign/index.html
@@ -20,6 +20,17 @@
                 イヤホンジャックの向こう側に広がる世界を、ぜひご堪能ください。</p>
            </div>
         </section>
+        <section class="songs">
+            <h2>収録曲</h2>
+            <ol>
+                <li>C#</li>
+                <li>ワンルームファッションショー</li>
+                <li>ハッピータイム</li>
+                <li>シャンディガフ</li>
+                <li>僕は知らない</li>
+                <li>キミのうた</li>
+            </ol>
+        </section>
         <footer>
 
         </footer>
