【追加】セクション3、レクチャー23

--- a/lesson2_ResponsiveWebDesign/index.html
+++ b/lesson2_ResponsiveWebDesign/index.html
@@ -10,27 +10,29 @@
         <header>
             <h1>COCOA</h1>
         </header>
-        <section class="information">
-            <h1>イヤホンジャックの向こう側</h1>
-            <p class="type">Album</p>
-            <div class="description">
-                <img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真" >
-                <p>COCOA 4枚目のアルバムとなる今作。ジャケットデザインに色鉛筆画家の「カタヒラシュンシ」氏を迎え、音楽と絵のコラボを実現させた一枚。</p>
-                <p>HONDA CARS　静岡CM　タイアップの「キミのうた」をはじめ、完全書き下ろしの新曲3枚を含む全6曲を収録。
-                イヤホンジャックの向こう側に広がる世界を、ぜひご堪能ください。</p>
-           </div>
-        </section>
-        <section class="songs">
-            <h2>収録曲</h2>
-            <ol>
-                <li>C#</li>
-                <li>ワンルームファッションショー</li>
-                <li>ハッピータイム</li>
-                <li>シャンディガフ</li>
-                <li>僕は知らない</li>
-                <li>キミのうた</li>
-            </ol>
-        </section>
+        <div class="content">
+            <section class="information">
+                <h1>イヤホンジャックの向こう側</h1>
+                <p class="type">Album</p>
+                <div class="description">
+                    <img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真" >
+                    <p>COCOA 4枚目のアルバムとなる今作。ジャケットデザインに色鉛筆画家の「カタヒラシュンシ」氏を迎え、音楽と絵のコラボを実現させた一枚。</p>
+                    <p>HONDA CARS　静岡CM　タイアップの「キミのうた」をはじめ、完全書き下ろしの新曲3枚を含む全6曲を収録。
+                    イヤホンジャックの向こう側に広がる世界を、ぜひご堪能ください。</p>
+            </div>
+            </section>
+            <section class="songs">
+                <h2>収録曲</h2>
+                <ol class="clearfix">
+                    <li>C#</li>
+                    <li>ワンルームファッションショー</li>
+                    <li>ハッピータイム</li>
+                    <li>シャンディガフ</li>
+                    <li>僕は知らない</li>
+                    <li>キミのうた</li>
+                </ol>
+            </section>
+        </div>
         <footer>
 
         </footer>
