【追加】セクション３、レクチャー27 （レスポンシブデザイン：メディアクエリ）

--- a/lesson2_ResponsiveWebDesign/index.html
+++ b/lesson2_ResponsiveWebDesign/index.html
@@ -24,7 +24,7 @@
             <section class="songs">
                 <h2>収録曲</h2>
                 <ol class="clearfix">
-                    <li>C#</li>
+                    <li><a href="https://www.youtube.com/watch?v=vjqTkOISzeY" target="blank">C#</a></li>
                     <li>ワンルームファッションショー</li>
                     <li>ハッピータイム</li>
                     <li>シャンディガフ</li>
@@ -34,7 +34,7 @@
             </section>
         </div>
         <footer>
-
+            &copy;COCOA
         </footer>
     </div>
 </body>
