--- a/lesson2_ResponsiveWebDesign/index.html
+++ b/lesson2_ResponsiveWebDesign/index.html
@@ -15,7 +15,7 @@
                 <h1>イヤホンジャックの向こう側</h1>
                 <p class="type">Album</p>
                 <div class="description">
-                    <img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真" >
+                    <a href="#"><img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真" ></a>
                     <p>COCOA 4枚目のアルバムとなる今作。ジャケットデザインに色鉛筆画家の「カタヒラシュンシ」氏を迎え、音楽と絵のコラボを実現させた一枚。</p>
                     <p>HONDA CARS　静岡CM　タイアップの「キミのうた」をはじめ、完全書き下ろしの新曲3枚を含む全6曲を収録。
                     イヤホンジャックの向こう側に広がる世界を、ぜひご堪能ください。</p>
