--- a/lesson3_Bootstrap/index.html
+++ b/lesson3_Bootstrap/index.html
@@ -37,12 +37,12 @@
                     <p>この度は、本書をご利用いただきありがとうございます。恐れ入りますが、以下のフォームにご記入いただき、送信していただけると幸いです。</p>
 
                     <div clas="form-group">
-                        <label for="name">お名前</label>
+                        <label for="name">お名前<span class="label label-danger">必須</span></label>
                         <input type="text" id="name" name="name" 
                         class="form-control" placeholder="例）山田 太郎">
                     </div>
                     <div class="form-group">
-                        <label for="job">ご職業</label>
+                        <label for="job">ご職業<span class="label label-danger">必須</span></label>
                         <select id="job" name="job" class="form-control">
                             <option value="">選択してください</option>
                             <option value="会社員">会社員</option>
@@ -51,7 +51,7 @@
                         </select>
                     </div>
                     <div class="from-group">
-                        <label>知りたい内容（複数回答可）</label>
+                        <label>知りたい内容（複数回答可）<span class="label label-success">任意</span></label>
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox" name="q1" value="html">
@@ -88,7 +88,12 @@
                             </label>
                         </div>
                     </div>
-
+                    
+                    <div class="form-group">
+                        <label for="message">ご意見</label>
+                        <textarea name="message" rows="10" class="form-control"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default">送信する</button>
                 </div>
             </form>
         </div>
