【追加】setInterval、clearIntervalでSTART/STOPの制御

--- a/lesson5_stopwatch/index.html
+++ b/lesson5_stopwatch/index.html
@@ -25,6 +25,29 @@
     </div>
 
     <script>
+        var start;
+        var timer_id;
+
+        document.getElementById('start_stop').addEventListener('click',
+        function(){
+
+            if(this.innerHTML === 'START'){
+                start = new Date();   
+
+                timer_id = setInterval(goTimer, 10);
+
+                this.innerHTML = 'STOP';
+                this.classList.remove('btn-primary');
+                this.classList.add('btn-danger');
+            }else{
+                clearInterval(timer_id);
+
+                this.innerHTML = 'START';
+                this.classList.remove('btn-danger');
+                this.classList.add('btn-primary');
+            }
+
+        })
 
         var addZero = function(value){
             if(value < 10){
@@ -32,7 +55,35 @@
             }
             return value;
         }
+
+        var goTimer = function(){
+            var now = new Date();
+
+            var milli = now.getTime() - start.getTime();
+            var seconds = Math.floor(milli / 1000);
+            var minutes = Math.floor(seconds / 60);
+            var hours = Math.floor(minutes / 60);
+
+            seconds = seconds - minutes * 60;
+            minutes = minutes - hours * 60;
+
+            hours = addZero(hours);
+            minutes = addZero(minutes);
+            seconds = addZero(seconds);
+
+            document.getElementById('timer').innerHTML = hours + ':' + minutes + ':' + seconds;
+        }
         
+
+
+/*
+        var addZero = function(value){
+            if(value < 10){
+                value = '0' + value;
+            }
+            return value;
+        }
+
         document.getElementById('start_stop').addEventListener('click',
         function(){
             var now = new Date();
@@ -48,7 +99,8 @@
             //HTML内のid要素を取得して、innerHTMLで書き換える。
             document.getElementById('timer').innerHTML = hours + ':' + minutes + ':' + seconds;
         })
-        
+*/      
+
     </script>
 </body>
 </html>
